--- a/src/static/stylesheets/words.scss
+++ b/src/static/stylesheets/words.scss
@@ -143,17 +143,27 @@ $banner_width: 20%;
   }
 
   header {
+    margin-bottom: 2.5rem;
+
     h1 {
-      margin-bottom: 0;
+      margin-bottom: 1.5rem;
+      margin-top: 0;
+    }
+
+    .date {
+      margin-top: 0.75rem;
+      margin-bottom: 0rem;
     }
 
     ul {
       list-style: none;
-      margin: 0 0 2rem 0;
+      margin: 0;
       padding: 0;
+      line-height: 1rem;
 
       li {
-        display: inline-block;
+        display: inline list-item;
+        margin: 0 0.25rem 0 0;
       }
     }
   }
